policies/disallow-privilege-escalation/.test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: disallow-privilege-escalation
policies:
  - ../policy.yaml
resources:
  - resources.yaml
results:
  - policy: disallow-privilege-escalation
    rule: disallow-privilege-escalation
    kind: Pod
    resources:
      - good-pod-no-escalation
    result: pass
  - policy: disallow-privilege-escalation
    rule: disallow-privilege-escalation
    kind: Pod
    resources:
      - bad-pod-escalation
      - bad-pod-init-escalation
    result: fail
  - policy: disallow-privilege-escalation
    rule: disallow-privilege-escalation
    kind: Pod
    resources:
      - exempt-system-pod
    result: skip
